--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "vue2 components",
   "main": "dist/vue-rabbit.js",
   "scripts": {
-    "dev": "webpack-dev-server --hot --progress --colors --config build/webpack.config.dev.js"
+    "dev": "webpack-dev-server --hot --progress --colors --config build/webpack.config.dev.js",
+    "build": "webpack --verbose --profile --colors --display-error-details --config build/webpack.config.prod.js",
+    "eslint": "eslint examples --ext .vue",
+    "stylelint": "stylelint src/styles/*/*.less",
+    "tslint": "tslint src/*/*/ts src/*/*/tsx"
   },
   "repository": {
     "type": "git",
@@ -17,7 +21,7 @@
     "ui",
     "babel"
   ],
-  "typings": "",
+  "typings": "dist/typings/index.d.ts",
   "author": "smokingRabbit",
   "license": "MIT",
   "bugs": {
@@ -27,17 +31,32 @@
   "devDependencies": {
     "@babel/plugin-syntax-jsx": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
+    "babel-eslint": "^10.0.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^8.0.4",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
+    "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.4",
     "css-loader": "^1.0.0",
+    "cssnano": "^4.1.7",
+    "eslint": "^5.7.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-html": "^4.0.6",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-typescript": "^0.12.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
+    "mini-css-extract-plugin": "^0.4.4",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss": "^7.0.5",
     "postcss-loader": "^3.0.0",
     "style-loader": "^0.23.1",
@@ -45,7 +64,7 @@
     "stylelint-webpack-plugin": "^0.10.5",
     "ts-loader": "^5.2.2",
     "tslint": "^5.11.0",
-    "tslint-config-standard": "^8.0.1",
+    "tslint-formatter-beauty": "^3.0.0",
     "tslint-loader": "^3.5.4",
     "typescript": "^3.1.3",
     "url-loader": "^1.1.2",
