--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     "experimentalDecorators": true,
     "declaration": true,
     "declarationDir": "./dist/typings",
-    "inlineSources": true
+    "inlineSources": true,
+    "noImplicitAny": false
   },
   "exclude": [
     "examples",
