--- a/.babelrc
+++ b/.babelrc
@@ -7,6 +7,7 @@
     "plugins": [
         "@babel/syntax-jsx",
         "transform-class-properties",
-        "transform-vue-jsx"
+        "transform-vue-jsx",
+        "@babel/plugin-transform-runtime"
     ]
 }
