--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "homepage": "https://github.com/smokingRabbit/vue-rabbit#readme",
   "devDependencies": {
     "@babel/plugin-syntax-jsx": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.1.0",
     "babel-eslint": "^10.0.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
@@ -83,6 +84,7 @@
   },
   "dependencies": {
     "@babel/helper-module-imports": "^7.0.0",
+    "@babel/runtime": "^7.2.0",
     "@types/node": "^10.12.18",
     "async-validator": "^1.10.1"
   }
